home link added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
         <title>Page Title</title>
     </head>
     <body>
+        <div>
+            <a href="">Home</a>
+        </div>
 
         <h1>This is my website</h1>
         <p>welcome to my website.</p>
+        
 
     </body>
 </html>
