--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
             <a href="contact.html">Contact</a>
         </div>
 
-        <h1>This is my website</h1>
+        <h1>This is contact page.</h1>
         <p>welcome to my website.</p>
         
 
