about link added

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             <a href="about.html">About us</a>
         </div>
 
-        <h1>This is contact page.</h1>
+        <h1>This is about us page</h1>
         <p>welcome to my website.</p>
         
 
