--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <div>
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
+            <a href="about.html">About us</a>
         </div>
 
         <h1>This is my website</h1>
