--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About us</a>
-        </div>
-
-        <h1>This is contact page.</h1>
+            <a href="section.html">section</a>
+        </div>    
+                        
         <p>welcome to my website.</p>
         
 
