--- a/section.html
+++ b/section.html
@@ -8,7 +8,7 @@
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About us</a>
-            <a href="section.html">About us</a>
+            <a href="section.html">section</a>
 
         </div>
 
