--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
             <a href="about.html">About us</a>
+            <a href="section.html">section</a>
         </div>
 
         <h1>This is my website</h1>
